--- a/index.html
+++ b/index.html
@@ -6,4 +6,13 @@
         <title>Landing Page</title>
     </head>
 
-</html>
+    <body>
+        <div class="header"></div>
+        <div class="box-1"></div>
+        <div class="box-2"></div>
+        <div class="box-3"></div>
+        <div class="box-4"></div>
+        <div class="footer"></div>
+    </body>
+
+    </html>
