--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     </head>
 
     <body>
-        <div class="header"></div>
+        <div class="header">
+            <img src="/home/ricardo-morales/pictures/lawyer.jpg" alt="A lawyer sitting in his office adjacent to his client going over files talking about their case.">
+            <ul>
+                <li><a href="#">Case References</a></li>
+                <li><a href="#">Find YOU'R Lawyer</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
         <div class="box-1"></div>
         <div class="box-2"></div>
         <div class="box-3"></div>
