--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
                 <li><a href="#">Contact Us</a></li>
             </ul>
         </div>
-        <div class="box-1"></div>
+        <div class="box-1">
+            <div>
+                <div class="hero-text"></div>
+                <div class="hero-subtext"></div>
+                <button></button>
+            </div>
+            
+        </div>
         <div class="box-2"></div>
         <div class="box-3"></div>
         <div class="box-4"></div>
