--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
             </ul>
         </div>
         <div class="box-1">
-            <div>
-                <div class="hero-text"></div>
-                <div class="hero-subtext"></div>
-                <button></button>
+            <div class="hero">
+                <div class="hero-text">We are the lawyers for you!</div>
+                <div class="hero-subtext">From criminal to civil law, our track record is unbeaten and unmatched. Wether your looking to keep you'r freedom or get the max settlement offer, WE WILL FIGHT FOR YOU!</div>
+                <button>Sign up</button>
             </div>
-            
+            <img src="/home/ricardo-morales/pictures/lawyer-2.jpg" alt="law weight scales in the forefront focus on a desk with a lawyer  working out of focus in the background"
+
         </div>
         <div class="box-2"></div>
         <div class="box-3"></div>
