--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
             <img class="lawyer-1" src="/home/ricardo-morales/pictures/lawyer.jpg" alt="A lawyer sitting in his office adjacent to his client going over files talking about their case.">
             <ul>
                 <li><a href="#">Case References</a></li>
-                <li><a href="#">Find YOU'R Lawyer</a></li>
+                <li><a href="#">Find YOUR Lawyer</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
         </div>
         <div class="box-1">
             <div class="hero">
                 <div class="hero-text">We are the lawyers for you!</div>
-                <div class="hero-subtext">From criminal to civil law, our track record is unbeaten and unmatched. Wether your looking to keep you'r freedom or get the max settlement offer, WE WILL FIGHT FOR YOU!</div>
+                <div class="hero-subtext">From criminal to civil law, our track record is unbeaten and unmatched. Wether your looking to keep your freedom or get the max settlement offer, WE WILL FIGHT FOR YOU!</div>
                 <button>Sign up</button>
             </div>
             <img class="lawyer-2" src="/home/ricardo-morales/pictures/lawyer-2.jpg" alt="law weight scales in the forefront focus on a desk with a lawyer  working out of focus in the background">
