--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
             </div>
             <img class="lawyer-2" src="/home/ricardo-morales/pictures/lawyer-2.jpg" alt="law weight scales in the forefront focus on a desk with a lawyer  working out of focus in the background">
         </div>
-        <div class="box-2"></div>
+        <div class="box-2">
+            <div class="box-2-text">Listen to some of our clients</div>
+            <div class="reviews">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
         <div class="box-3"></div>
         <div class="box-4"></div>
         <div class="footer"></div>
