--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <div class="box-2">
             <div class="review-text">Listen to some of our clients</div>
             <div class="reviews">
-                <div><img src="/home/ricardo-morales/pictures/review-1.jpg" alt="an elderly couple shaking hands with their lawyer happily within his office"></div>
-                <div><img src="/home/ricardo-morales/pictures/review-2.jpg" alt="a man with his son piggybacking smiling in nature setting while the man thumbs up the camera"></div>
-                <div><img src="/home/ricardo-morales/pictures/review-3.jpg" alt="a young man sitting in his home office studying while taking notes in his journal"></div>
-                <div><img src="/home/ricardo-morales/pictures/review-4.jpg" alt="a dark colored picture of arms grasping the bars of the jail cell they are in"></div>
+                <div class="review-boxes"><img src="/home/ricardo-morales/pictures/review-1.jpg" alt="an elderly couple shaking hands with their lawyer happily within his office"></div>
+                <div class="review-boxes"><img src="/home/ricardo-morales/pictures/review-2.jpg" alt="a man with his son piggybacking smiling in nature setting while the man thumbs up the camera"></div>
+                <div class="review-boxes"><img src="/home/ricardo-morales/pictures/review-3.jpg" alt="a young man sitting in his home office studying while taking notes in his journal"></div>
+                <div class="review-boxes"><img src="/home/ricardo-morales/pictures/review-4.jpg" alt="a dark colored picture of arms grasping the bars of the jail cell they are in"></div>
             </div>
         </div>
         <div class="box-3"></div>
