--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="reviews">
                 <div class="review-boxes"><img class="review-img" src="/home/ricardo-morales/pictures/review-1.jpg" alt="a young couple dressed business casual shaking hands with their lawyer within their office">Dr. Manuel helped us navigate our first homebuying experience and was there every step of the way</div>
                 <div class="review-boxes"><img class="review-img" src="/home/ricardo-morales/pictures/review-2.jpg" alt="a man with his son piggybacking smiling in nature setting while the man thumbs up the camera">Attorney John Smith helped me win my medical malpractice case and won us the money we needed so my son can live a healthy life</div>
-                <div class="review-boxes"><img class="review-img" src="/home/ricardo-morales/pictures/review-3.jpg" alt="a young man sitting in his home office studying while taking notes in his journal"></div>
+                <div class="review-boxes"><img class="review-img" src="/home/ricardo-morales/pictures/review-3.jpg" alt="a young man sitting in his home office studying while taking notes in his journal">Attorney Rebecca Gonzales made sure I got the most financial aid possible as well as grants so that I can further my education</div>
                 <div class="review-boxes"><img class="review-img" src="/home/ricardo-morales/pictures/review-4.jpg" alt="a dark colored picture of arms grasping the bars of the jail cell they are in"></div>
             </div>
         </div>
