--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
                 <div class="review-boxes"><img class="review-img" src="/home/ricardo-morales/pictures/review-4.jpg" alt="a dark colored picture of arms grasping the bars of the jail cell they are in">Ph.D Michael Roberts fought hard to aqquit me of 9 felony charges and ensured I may live a free peaceful life</div>
             </div>
         </div>
-        <div class="box-3"></div>
+        <div class="box-3">
+            <div class="boc-3-container">
+                <div></div>
+                <div></div>
+            </div>
+        </div>
         <div class="box-4"></div>
         <div class="footer"></div>
     </body>
