--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="box-3">
-            <div class="boc-3-container">
+            <div class="box-3-container">
                 <div></div>
                 <div></div>
             </div>
