--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             </div>
         </div>
         <div class="box-3">
-            <div class="box-3-container">
-                <div></div>
+            <div>
+                <div class="quote">A lawyer without history or literature is a mechanic, a mere working mason; if he possesses some knowledge of these, he may venture to call himself an architect.</div>
                 <div></div>
             </div>
         </div>
