--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="box-3">
             <div>
                 <div class="quote">A lawyer without history or literature is a mechanic, a mere working mason; if he possesses some knowledge of these, he may venture to call himself an architect.</div>
-                <div></div>
+                <div class="quoter">-Walter Scott</div>
             </div>
         </div>
         <div class="box-4"></div>
