--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
                 <div class="quoter">-Walter Scott</div>
             </div>
         </div>
-        <div class="box-4"></div>
+        <div class="box-4">
+            <div class="cta">
+                <div></div>
+                <div></div>
+            </div>
+            <button>Sign up</button>
+        </div>
         <div class="footer"></div>
     </body>
 
