--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         </div>
         <div class="box-4">
             <div class="cta">
-                <div></div>
-                <div></div>
+                <div>Sign up for a free consultation today!</div>
+                <div>Get in touch with your lawyer prospect today.</div>
             </div>
             <button>Sign up</button>
         </div>
