--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="box-4">
             <div class="cta">
                 <div class="cta-hook">Sign up for a free consultation today!</div>
-                <div class="cta-text">Get in touch with your lawyer prospect today.</div>
+                <div class="cta-text">Get in touch with your qualified lawyer prospect today and let's discuss how we can help you.</div>
             </div>
             <button>Sign up</button>
         </div>
