--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="hero">
                 <div class="hero-text">We are the lawyers for you!</div>
                 <div class="hero-subtext">From criminal to civil law, our track record is unbeaten and unmatched. Wether your looking to keep your freedom or get the max settlement offer, WE WILL FIGHT FOR YOU!</div>
-                <button>Sign up</button>
+                <button class="hero-button">Sign up</button>
             </div>
             <img class="lawyer-2" src="/home/ricardo-morales/pictures/lawyer-2.jpg" alt="law weight scales in the forefront focus on a desk with a lawyer  working out of focus in the background">
         </div>
@@ -43,7 +43,7 @@
                 <div class="cta-hook">Sign up for a free consultation today!</div>
                 <div class="cta-text">Get in touch with your qualified lawyer prospect today and let's discuss how we can help you.</div>
             </div>
-            <button>Sign up</button>
+            <button class="cta-button">Sign up</button>
         </div>
         <div class="footer"></div>
     </body>
