--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             </div>
             <button class="cta-button">Sign up</button>
         </div>
-        <div class="footer"></div>
+        <div class="footer">
+            The Better Lawyers LLC 2024
+        </div>
     </body>
 
     </html>
