--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <button class="cta-button">Sign up</button>
         </div>
         <div class="footer">
-            The Better Lawyers LLC 2024
+            The Better Lawyers LLC Since 2024
         </div>
     </body>
 
